--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VIBRATOUR </title>
  <link rel="stylesheet" href="style.css">
+ <link rel="manifest" href=
+
 </head>
 <body>
 
@@ -26,7 +28,7 @@
   
   
     <h2 id="titulo"> O TURISMO MAIS PERTO DE VOCÊ </h2>       
-    <img class="imagem" src="torre de cristal.png"> 
+    <img class="imagem" src="imagens/torre de cristal.png"> 
 
     <h3 id="subtitulo"> SOBRE O APLICATIVO </h3>
 
@@ -49,11 +51,11 @@
 
     <h5 id="texto2">Aproveite a principal funcionalidade desde aplicativo que te permite saber quando você estiver perto de um ponto turistico, seja museu ou monumento historico baixe esse aplicativo e se surpreenda!</h5>
        
-    <img class="imagem2" src="vibb.png" >
+    <img class="imagem2" src="imagens/vibb.png" >
 
              <h4 id="subtitulo3"> Personalize o modo de vibração para um melhor aproveitamento!</h4>
 
-     <img class="imagem3" src="vibs.png">
+     <img class="imagem3" src="imagens/vibs.png">
 
     <div class="button1">
       <button class="button">
