--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VIBRATOUR </title>
  <link rel="stylesheet" href="style.css">
- <link rel="manifest" href= manifest.json>
+ <link rel="manifest" href= "manifest.json">
  <meta name="description" content="Aplicativo para turismo no recife.">
 
 </head>
