--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
  <link rel="stylesheet" href="style.css">
  <link rel="manifest" href= "manifest.json">
  <meta name="description" content="Aplicativo para turismo no recife.">
+  <meta name="theme_color" content="#77b9d3">
 
 </head>
 <body>
