--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
 
      <img alt=" Celulares vibrando" class="imagem3" src="imagens/vibs.png">
 
-    <div class="button1">
-      <button class="button">
+     <div class="button1">
+      <button class="button" onclick="getLocation()">
         <span class="button_lg">
             <span class="button_sl"></span>
-            <span class="button_text">Download Now</span>
+            <span class="button_text">Download now</span>
         </span>
-    </button>
+      </button>
     </div>
 
 
