--- a/index.html
+++ b/index.html
@@ -25,6 +25,27 @@
       if (navigator.vibrate) {
         navigator.vibrate([500, 300, 100]); 
       }
+
+      getCityName(position.coords.latitude, position.coords.longitude);
+    }
+
+    function getCityName(latitude, longitude) {
+      fetch(`https://nominatim.openstreetmap.org/reverse?format=json&lat=${latitude}&lon=${longitude}`)
+        .then(response => response.json())
+        .then(data => {
+          var city = data.address.city;
+          if (!city) {
+            city = data.address.town;
+          }
+          if (!city) {
+            city = data.address.village;
+          }
+          if (!city) {
+            city = data.address.hamlet;
+          }
+          document.getElementById('cityName').innerText = "Nome da cidade: " + city;
+        })
+        .catch(error => console.error('Erro ao obter os dados:', error));
     }
   </script>
 
@@ -73,6 +94,10 @@
   </button>
 </div>
 
+<div id="cityName">Nome da cidade:</div>
+<button onclick="getLocationAndCity()">Obter Nome da Cidade</button>
+
 </body>
 </html>
+
 
